2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	Centralise parser configuration values.

	* tp/texi2any.pl: Refer to %default_customization_values in 
	Texinfo::Common instead of Texinfo::Parser.  Continues change 
	made on 2019-01-29.

2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>

	perldoc-all Makefile change

	* contrib/perldoc-all/GNUmakefile: Change distclean target to 
	dist-hook to avoid deleting inappropriate files with distclean.

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Continue search after a node wasn't found.

	* info/session.c (info_search_internal): If a node couldn't be 
	found, go onto the next node.
	This could happen if there was a comma in a node name.

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove duplicate sub definition.

	* Pod-Simple-Texinfo/pod2texi.pl (__): Remove definition as 
	there is already one exported by Texinfo::Common (for translated 
	strings).

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Try to fix contrib/perldoc-all.

	* contrib/perldoc-all/gendocs-sh: Add, from gendocs.sh in gnulib 
	project.
	* contrib/perldoc-all/Makefile.am: Access it instead of relying 
	on gendocs.sh being in path.  Do not remove *.?? (intending to 
	remove auxiliary index files) as this may delete the *.tar.gz 
	file the user has just downloaded.

	Keith Thompson reported problems with building Perl manuals with 
	this system.

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Centralise parser configuration values.

	* tp/Texinfo/ParserNonXS.pm,
	* tp/Texinfo/Common.pm (%default_customization_values):
	Move to Common.pm.
	* tp/Texinfo/XS/parsetexi/Parsetexi.pm: Use this hash instead of 
	having a separate copy for this module.

2019-01-29  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove 'parent_type' field.

	* tp/Texinfo/XS/parsetexi/tree_types.h (ELEMENT):
	Remove field 'parent_type'.
	(enum route_element_type): Remove.
	* tp/Texinfo/XS/parsetexi/end_line.c (end_line_starting_block)