@@ -1,5 +1,13 @@
 2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	Remove unused type.
+
+	* tp/Texinfo/XS/parsetexi/tree_types.h (DEF_ARGS_EXTRA): Remove.
+	(Suggestion from Hans-Bernhard Bröker.)
+	(INDEX_ENTRY_REF): Update comment.
+
+2019-01-31  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	Centralise parser configuration values.
 
 	* tp/texi2any.pl: Refer to %default_customization_values in 
